--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>git learn</h1>
-    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, exercitationem. Eum suscipit eaque tempore fugit impedit sapiente quo quia delectus.</span>
+    <p>Lorem, ipsum.</p>
+    <span>sunil kaushik</span>
 </body>
 </html>
