--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>git learn</h1>
-    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, exercitationem. Eum suscipit eaque tempore fugit impedit sapiente quo quia delectus.</span>
+    <h2>Pizza</h2>
 </body>
 </html>
